added all media queries

--- a/app/index.html
+++ b/app/index.html
@@ -484,7 +484,7 @@
         </div>
       </section>
 
-      <section class="apps section-padding">
+      <section class="apps">
         <div class="container">
           <div class="apps__inner">
             <div class="apps__content">
