--- a/app/html/catalog.html
+++ b/app/html/catalog.html
@@ -2,10 +2,11 @@
 @include('./components/header.html')
 <main class="main">
   @include('./components/breadcrumbs.html')
+  @include('./components/products-catalog.html')
+  @include('./components/pagination.html')
   <div class="wrapper">
-
-
     @include('./components/apps.html')
+    @include('./components/discounts.html')
   </div>
 </main>
 @include('./components/footer.html')
