--- a/app/html/catalog.html
+++ b/app/html/catalog.html
@@ -1,13 +1,11 @@
-@include('./components/page-index/head.html')
+@include('./components/head.html')
 @include('./components/header.html')
 <main class="main">
   @include('./components/breadcrumbs.html')
-  @include('./components/products-catalog.html')
+  @include('./components/product-catalog.html')
   @include('./components/pagination.html')
-  <div class="wrapper">
-    @include('./components/apps.html')
-    @include('./components/discounts.html')
-  </div>
+  @include('./components/apps.html')
+  @include('./components/discounts.html')
 </main>
 @include('./components/footer.html')
 @include('./components/script.html')
