--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,4 +1,4 @@
-@include('./components/page-index/head.html')
+@include('./components/head.html')
 @include('./components/header.html')
 <main class="main">
   <div class="wrapper">
