added media queries

--- a/app/index.html
+++ b/app/index.html
@@ -202,8 +202,8 @@
       </li>
     </ul>
 
-    <ul class="burgers">
-      <li class="burgers__item mix category-a">
+    <ul class="popular-categories__burgers">
+      <li class="popular-categories__box mix category-a">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
             alt="Чизбургер с листьями салата">
@@ -215,7 +215,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-b">
+      <li class="popular-categories__box mix category-b">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/burger.jpg" alt="Бифбургер">
           <h3 class="product-card__title">Бифбургер</h3>
@@ -226,7 +226,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-c">
+      <li class="popular-categories__box mix category-c">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/queen-burger.jpg"
             alt="Королевский чизбургер">
@@ -238,7 +238,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-d">
+      <li class="popular-categories__box mix category-d">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/black-burger.jpg"
             alt="Черный гамбургер">
@@ -250,7 +250,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-d">
+      <li class="popular-categories__box mix category-d">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/chicken-burger.jpg"
             alt="Чикен бургер">
@@ -262,7 +262,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-a">
+      <li class="popular-categories__box mix category-a">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/cheese-burger.jpg"
             alt="Чизбургер с листьями салата">
@@ -274,7 +274,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-d">
+      <li class="popular-categories__box mix category-d">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/burger.jpg" alt="Бифбургер">
           <h3 class="product-card__title">Бифбургер</h3>
@@ -285,7 +285,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-c">
+      <li class="popular-categories__box mix category-c">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/queen-burger.jpg"
             alt="Королевский чизбургер">
@@ -295,7 +295,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-b">
+      <li class="popular-categories__box mix category-b">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/black-burger.jpg"
             alt="Черный гамбургер">
@@ -307,7 +307,7 @@
         </article>
       </li>
 
-      <li class="burgers__item mix category-a">
+      <li class="popular-categories__box mix category-a">
         <article class="product-card">
           <img class="product-card__img" width="140" height="140" src="images/burgers/chicken-burger.jpg"
             alt="Чикен бургер">
@@ -449,37 +449,6 @@
     </ul>
   </div>
 </section>
-    <section class="apps section-padding">
-  <div class="container">
-    <div class="apps__inner">
-      <div class="apps__content">
-        <h2 class="apps__title title">Скачайте мобильное приложение</h2>
-        <div class="apps__text">
-          <p>Рестораны, которые вы любите - в ваших руках. Устанавливайте приложение и
-            заказывайте
-            еду в любом удобном месте.
-          </p>
-        </div>
-        <ul class="apps__items">
-          <li class="apps__item">
-            <a class="apps__link" target="_blank" href="#">
-              <img class="apps__application" src="images/app-store.jpg" width="120" height="40"
-                alt="загрузи приложение на app store">
-            </a>
-          </li>
-          <li class="apps__item">
-            <a class="apps__link" target="_blank" href="#">
-              <img class="apps__application" src="images/google-play.jpg" width="135" height="40"
-                alt="загрузи приложение на google play">
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="apps__img" style="background-image: url('images/app-download.jpg')">
-      </div>
-    </div>
-  </div>
-</section>
     <section class="comments">
   <div class="container">
     <h2 class="comments__title title">Отзывы клиентов</h2>
@@ -588,6 +557,37 @@
     </ul>
   </div>
 </section>
+    <section class="apps section-padding">
+  <div class="container">
+    <div class="apps__inner">
+      <div class="apps__content">
+        <h2 class="apps__title title">Скачайте мобильное приложение</h2>
+        <div class="apps__text">
+          <p>Рестораны, которые вы любите - в ваших руках. Устанавливайте приложение и
+            заказывайте
+            еду в любом удобном месте.
+          </p>
+        </div>
+        <ul class="apps__items">
+          <li class="apps__item">
+            <a class="apps__link" target="_blank" href="#">
+              <img class="apps__application" src="images/app-store.jpg" width="120" height="40"
+                alt="загрузи приложение на app store">
+            </a>
+          </li>
+          <li class="apps__item">
+            <a class="apps__link" target="_blank" href="#">
+              <img class="apps__application" src="images/google-play.jpg" width="135" height="40"
+                alt="загрузи приложение на google play">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="apps__img" style="background-image: url('images/app-download.jpg')">
+      </div>
+    </div>
+  </div>
+</section>
   </div>
 </main>
 <footer class="footer section-padding">
@@ -596,7 +596,7 @@
 
       <div class="footer__items">
         <a class="logo footer__logo" href="#">
-          <img class="logo__img" src="images/svg/logo.svg" width="200" height="39" alt="логотип">
+          <img class="logo__img footer__img" src="images/svg/logo.svg" width="200" height="39" alt="логотип">
         </a>
         <form class="form-subscribe" action="#">
           <label class="sr-only">введите email</label>
